# cw-webhost

./: Cargo.toml  README.md  justfile
artifacts/: checksums.txt  checksums_intermediate.txt
src/: contract.rs  error.rs  msg.rs  state.rs
